infra/kubernetes/backend.deployment.k8s.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
        tier: frontend
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: backend
          image: $REPO/backend.isotope.seanmorr.is:$TAG
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
          ports:
            - containerPort: 80
