infra/kubernetes/cache-warmer.deployment.k8s.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: cache-warmer
  labels:
    app: cache-warmer
spec:
  selector:
    matchLabels:
      app: cache-warmer
      role: worker
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: cache-warmer
        role: worker
        tier: backend
    spec:
      imagePullSecrets:
        - name: $REPO_CREDS
      containers:
        - name: cache-warmer
          image: $REPO/is.seanmorr.thruput.queue:$TAG
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
