infra/kubernetes/frontend.deployment.k8s.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
        tier: frontend
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: frontend
          image: r.cfcr.io/seanmorris/is.seanmorr.thruput.proxy:latest
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
          ports:
            - containerPort: 80
