infra/kubernetes/load-balancer.deployment.k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: load-balancer
  labels:
    app: load-balancer
spec:
  selector:
    matchLabels:
      app: load-balancer
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: load-balancer
        tier: frontend
    spec:
      imagePullSecrets:
        - name: $REPO_CREDS
      containers:
        - name: load-balancer
          image: $REPO/load-balancer.isotope.seanmorr.is:$TAG
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
          ports:
            - containerPort: 80
