infra/kubernetes/mysql.deployment.k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  labels:
    app: database
spec:
  selector:
    matchLabels:
      app: database
      role: master
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: database
        role: master
        tier: backend
    spec:
      containers:
        - name: database
          image:  mariadb:10.4.8-bionic
          ports:
            - containerPort: 3306
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
