infra/kubernetes/rabbit.deployment.k8s.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: rabbit
  labels:
    app: rabbit
spec:
  selector:
    matchLabels:
      app: rabbit
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: rabbit
        tier: backend
    spec:
      imagePullSecrets:
        - name: $REPO_CREDS
      containers:
        - name: rabbit
          image: bitnami/rabbitmq:3.8-debian-9
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 5672
