infra/kubernetes/socket.deployment.k8s.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: socket
  labels:
    app: socket
spec:
  selector:
    matchLabels:
      app: socket
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: socket
        tier: frontend
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: socket
          image: $REPO/socket.isotope.seanmorr.is:$TAG
          resources:
            requests:
              cpu: 50m
              memory: 512Mi
          ports:
            - containerPort: 80
