infra/kubernetes/frontend.service.k8s.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app:  frontend
    tier: frontend
spec:
  type: LoadBalancer 
  ports:
    - port:       80
      targetPort: 80
  selector:
    app:  frontend
    tier: frontend
