infra/kubernetes/http.service.k8s.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app:  backend
    tier: frontend
spec:
  ports:
    - port:       80
      targetPort: 80
  selector:
    app:  backend
    tier: frontend
