infra/kubernetes/load-balancer.service.k8s.yml
apiVersion: v1
kind: Service
metadata:
  name: load-balancer
  labels:
    app:  load-balancer
    tier: frontend
spec:
  type: LoadBalancer 
  ports:
    - port:       80
      targetPort: 80
  selector:
    app:  load-balancer
    tier: frontend
