infra/kubernetes/rabbit.service.k8s.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbit
  labels:
    app: rabbit
    tier: backend
spec:
  type: ClusterIP
  ports:
    - port:       5672
      targetPort: 5672
  selector:
    app: rabbit
    tier: backend
