infra/kubernetes/socket.service.k8s.yml
apiVersion: v1
kind: Service
metadata:
  name: socket
  labels:
    app: socket
    tier: backend
spec:
  type: NodePort 
  ports:
    - port:       9998
      targetPort: 9998
  selector:
    app: socket
    tier: backend
