infra/kubernetes/backend.ingress.k8s.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
spec:
 rules:
 - host: isotope.seanmorr.is
   http:
     paths:
     - backend:
         serviceName: backend
         servicePort: 80
