infra/kubernetes/frontend.ingress.k8s.yml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend
  annotations:
spec:
 rules:
 - host: frontend.$HOST
   http:
     paths:
     - backend:
         serviceName: backend
         servicePort: 80
