infra/kubernetes/load-balancer.ingress.k8s.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: load-balancer
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "load-balancer-external-ip"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout:    "10"
    nginx.ingress.kubernetes.io/proxy-read-timeout:    "10"
spec:
 rules:
 - host: isotope.$HOST
   http:
     paths:
     - backend:
         serviceName: backend
         servicePort: 80
