infra/kubernetes/socket.ingress.k8s.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: socket
  annotations:
spec:
 rules:
 - host: socket.isotope.$EXTERNAL_IP.nip.io
   http:
     paths:
     - backend:
         serviceName: socket
         servicePort: 80
